public/stylesheets/style.css
body {
  height: 125vh;
  margin-top: 40px;
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  letter-spacing: 2px;
  background-color: #DDEAEF;
}
.content-body {
  margin-top: 320px;
}
header {
  background-color: #344A53;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 80px;
  z-index: 9999;
}
/* z index keeps header on top! */
header * {
  display: inline-flex;
}
header li {
  margin: 20px;
}
header li a {
  text-decoration: none;
  letter-spacing: 2px;
  color: white;
}
header li a:hover {
  color: #97AFB9;
}
a:hover {
  color: #344A53;
}
a {
  color: black;
}
/* index page pre-login */
#login-body {
  background-image: url("https://i.imgur.com/SDlwshd.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  text-align: center;
}
#login-title {
  color: white;
  font: 80px "Lucida Grande", Helvetica, Arial, sans-serif;
  text-transform: uppercase;
  letter-spacing: 30px;
  margin-top: 40px;
}
#login-button {
  width: 100px;
  height: 50px;
  background-color: #F59432;
  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
  letter-spacing: 2px;
  padding: 8px;
  border-radius: 5px;
  border: none;
  margin-top: 80px;
}
#login-button:hover {
  border-radius: 10px;
  font-weight: bold;
}
#login-p {
  color: white;
  font-size: 15px;
  letter-spacing: 3px;
  margin-top: 30px;
}
/* . */
h1 {
  color: white;
  letter-spacing: 10px;
  position: absolute;
  top: 200px;
  margin: 0 auto;
  font-size: 40px;
}
h2 {
  text-transform: lowercase;
}
table {
  border: solid  #344A53;
  border-collapse: collapse;
  width: 100%;
}
th, td {
  border: 1px solid #344A53;
  border-collapse: collapse;
  padding: 5px 10px 5px 10px;
  text-align: center;
}
 form {
   margin: 5px;
 }
 #add-new-dive {
  text-align: right;
}
/* buttons */
.style-button {
  font: 12px "Lucida Grande", Helvetica, Arial, sans-serif;
  letter-spacing: 2px;
  padding: 8px;
  border-radius: 20px;
  border: solid 2px #97AFB9;
}
.style-button:hover {
  background-color: #97AFB9;
  color: white;
}
#delete-button {
  background-color: #F59432;
  border: solid #344A53;
}
/* profile page */
#profile-index {
  text-align: center;
}
/* header images */
.head-img {
  position: absolute;
  top: 80px;
  left: 0px;
  width: 100%;
  max-height: 300px;
  min-height: 300px;
  object-fit: cover;
}
/* form and log formatting  */
.flex-container {
  display: flex;
}
.flex-content {
  margin-right: 40px;
}
.bottom-space {
  margin: 50px;
}
.sm {
  width: 60px;
}
input , select {
  border: solid 1px;
  border-radius: 5px;
  font: 12px "Lucida Grande", Helvetica, Arial, sans-serif;
  letter-spacing: 2px;
  padding: 5px;
  margin: 5px;
}
#notes-input{
  width: 50%;
}
/* divider lines */
hr {
  margin-top: 15px;
  margin-bottom: 0px;
  margin-left: 0px;
  max-width: 650px;
}
.profile-hr {
  max-width: 300px;
}
/* . */

footer {
  background-color: #344A53;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 20px;
}
footer * {
  display: inline-flex;
}

